 * MAC violation triggers allowing to isolate a single device (#1320)

Enhancements
 * Using HTTP Return Code 501 "Not Implemented" for more effective client blocking
 * Cleanup in the Cisco 3560's code and documentation
 * Startup performance improvements
 * Added support for session-keyfile introduced in BIND 9.7 (#1257)

Bug Fixes
 * Slashes (/) not allowed in person id (#1322)
 * Inline: isolation not properly enforced by firewall if registration is disabled (#1330)
 * Several small fixes in pfdhcplistener 

--------------------------------------------------------------------------------
Version <release> released on <releaseDate>

Enhancements
 * Several new DHCP fingerprints (from our spinoff www.fingerbank.org)

--------------------------------------------------------------------------------
Version 3.0.3 released on 2011-11-21

New Hardware Support
 * Cisco Catalyst 6500 series switches in port-security
 * HP Procurve 5400 now supporting mac auth and 802.1x (with VoIP)

Enhancements
 * Performance improvements under stressed workloads
 * Translatable remediation templates (if a translated version exists, it'll override the default)
 * Guest management interface can be translated
 * More documentation for service watch
 * Eliminated some unnecessary warnings
 * Better help in the web admin UI
 * Added a new addon: import-node-csv.pl - bulk node import tool
 * Added a new addon: network-save-configs.pl - saves configs (write mem) for the whole network (only Cisco for now)

Bug Fixes
 * 802.1X broken on Cisco Catalyst 3750 (#1286)
 * Pop-up windows are too small (#1078)
 * Red Hat Enterprise Linux 6 installation instructions
 * Encoding on the remediation pages and on the release pages (scan, access enabled)
 * SNMPv3 issues affecting all the Cisco wired product line (#1284)
 * Allow incoming DHCP on management interface to track users IPs in production VLANs (as opposed to DNS added in 3.0.2)